# ubervvald

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: MobileNetV1.py  MobileNetV2.py  coco.ipynb  cocov1.ipynb  torch-multilclass.ipynb
ubervvald/: __init__.py  _utils.py  quant.py
